--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ html {
    margin: auto;  /* I want it in the center */
 }
 
+#iPieceSquare {
+   width: 1px; /**previously 810, before 640*/
+   height: 1px;
+   /*background-color: black;*/
+   display: none;
+}
+
 #turn {
    color: rgb(255, 255, 255);
 }
@@ -31,6 +38,30 @@ html {
 }
 
 /* there's no path to put behind the img (svg) */
+.modal {
+   background-color: rgba(0, 0, 0, 0.3); 
+   opacity: 0;
+   position: fixed;
+   top: 0; 
+   left: 0; 
+   right: 0; 
+   bottom: 0;
+   transition: all 0.3s ease-in-out; 
+   z-index: -1;
+   
+   display: flex;
+   align-items: center; 
+   justify-content: center;
+}
+
+.modal-inner {
+   background-color:#fff;
+   border-radius: 5px; 
+   box-shadow: 0 1px 4px rgba(0,0, 0, 0.3);
+   padding: 15px 25px; 
+   text-align: center;
+   width: 380px; 
+}
 
 .piece {
    position: relative;
